# data-model-patterns

./: LICENSE  README.md  setup.cfg  setup.py
DataModeling/: __init__.py  association.py  classifier.py  clustering.py  regression.py
