[metadata]
name = data-model-patterns
version = 3.1.0
description = A mining model is created by applying an algorithm to data, but it is more than an algorithm or a metadata container: it is a set of data, statistics, and patterns that can be applied to new data to generate predictions and make inferences about relationships.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christiangarcia0311/data-model-patterns
author = Christian Garcia
author_email = iyaniyan03112003@gmail.com
license = MIT

[options]
packages = find: